--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "parcel index.html",
     "build": "parcel build index.html --public-url ./"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "parcel-bundler": "^1.12.4"
+  }
 }
