--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.5"
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.15"
   },
   "postcss": {
     "plugins": {
