--- a/package.json
+++ b/package.json
@@ -2,14 +2,41 @@
   "name": "github-replica",
   "version": "1.0.0",
   "description": "A replica of my Github repository tab",
-  "main": "index.js",
+  "main": "scripts/index.js",
   "author": "Adeola Adeyemo <adeola.adeyemoj@yahoo.com>",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --public-url ./"
+    "build": "parcel build index.html --public-url ./",
+    "test": "./node_modules/.bin/cypress open"
   },
   "license": "MIT",
   "dependencies": {
-    "parcel-bundler": "^1.12.5"
+    "@octokit/graphql": "^4.6.0",
+    "parcel-bundler": "^1.12.5",
+    "stickyfilljs": "^2.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "autoprefixer": "^9.0.0",
+    "cypress": "^7.2.0",
+    "eslint": "^7.24.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "postcss": "^8.2.12",
+    "prettier": "^2.2.1"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "overrideBrowserslist": [
+          ">1%",
+          "last 4 versions",
+          "Firefox ESR",
+          "ie >= 10"
+        ]
+      }
+    }
   }
 }
