--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-prettier": "^3.4.0",
-    "postcss": "^8.2.7",
+    "postcss": "^8.2.12",
     "prettier": "^2.2.1"
+  },
+  "peerDependencies": {
+    "postcss": "^8.2.12"
   },
   "postcss": {
     "plugins": {
